editor/libeditor/SplitNodeTransaction.cpp
@@ -188,6 +188,9 @@ NS_IMETHODIMP SplitNodeTransaction::RedoTransaction() {
   // Second, re-insert the left node into the tree
   containerParentNode->InsertBefore(newLeftContent,
                                     startOfRightContent.GetContainer(), error);
+  // InsertBefore() may call MightThrowJSException() even if there is no
+  // error. We don't need the flag here.
+  error.WouldReportJSException();
   NS_WARNING_ASSERTION(!error.Failed(), "nsINode::InsertBefore() failed");
   return error.StealNSResult();
 }
